--- a/src/app/layouts/cv/cv.component.scss
+++ b/src/app/layouts/cv/cv.component.scss
@@ -1,50 +1,67 @@
+// .container {
+//   position: relative;  
+//   /*Smart phone nhỏ*/
+//   @media screen and (min-width: 240px) {
+//     .content {
+//       color: green;
+//     }
+//   }
+
+//   /*Iphone(480 x 640)*/
+//   @media screen and (min-width: 320px) {
+//     .content {
+//       color: red;
+//     }
+//   }
+
+//   /*Tablet nhỏ(480 x 640)*/
+//   @media screen and (min-width: 480px) {
+//     .content {
+//       color: yellow;
+//     }
+//   }
+
+//   /*Ipad dọc(768 x 1024)*/
+//   @media screen and (min-width: 768px) {
+//     .content {
+//       width: 200px;
+//       height: 100px;
+//       position: absolute;
+//       top: 50%;
+//       left: 50%;
+//       margin: 50px 0 0 -100px;
+//       color: blue;
+//     }
+//   }
+
+//   /*Ipad ngang(1024 x 768)*/
+//   @media screen and (min-width: 1024px) {
+//     .content {
+//       color: #FFF;
+//     }
+//   }
+// }
+
 .container {
-  position: relative;  
-  /*Smart phone nhỏ*/
-  @media screen and (min-width: 240px) {
-    .content {
-      color: green;
-    }
-  }
-
-  /*Iphone(480 x 640)*/
-  @media screen and (min-width: 320px) {
-    .content {
-      color: red;
-    }
-  }
-
-  /*Tablet nhỏ(480 x 640)*/
-  @media screen and (min-width: 480px) {
-    .content {
-      color: yellow;
-    }
-  }
-
-  /*Ipad dọc(768 x 1024)*/
-  @media screen and (min-width: 768px) {
-    .content {
-      width: 200px;
-      height: 100px;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      margin: 50px 0 0 -100px;
-      color: blue;
-    }
-  }
-
-  /*Ipad ngang(1024 x 768)*/
-  @media screen and (min-width: 1024px) {
-    .content {
-      color: #FFF;
-    }
-  }
+  display: flex;
+  background-color: #1c1e1f;
+  width: 60%;
+  height: 85vh;
+  margin: 8vh auto;
 }
-
-.container {
-  background-color: #FFDC00;
-  width: 80%;
-  height: 90vh;
-  margin: 0 auto;
+.bar {
+  width: 5%;
+  height: 85vh;
+  background-color: #1c1e1f;
+}
+.avatar {
+  width: 40%;
+  height: 93vh;
+  background-image: url("https://n.foxdsgn.com/niko/black/wp-content/uploads/sites/4/2019/03/niko_img.jpg");
+  margin: -4vh 0;
+}
+.content {
+  width: 55%;
+  background-color: #1c1e1f;
+  height: 85vh;
 }
