--- a/src/app/layouts/cv/cv.component.html
+++ b/src/app/layouts/cv/cv.component.html
@@ -1,2 +1,10 @@
 <div class="container">
+  <div class="bar">
+    a
+  </div>
+  <div class="avatar">
+  </div>
+  <div class="content">
+    c
+  </div>
 </div>
