--- a/src/app/layouts/cv/cv.component.html
+++ b/src/app/layouts/cv/cv.component.html
@@ -1,6 +1,8 @@
 <div class="container">
   <div class="bar">
-    a
+    <div class="menu-icon">
+      Menu
+    </div>
   </div>
   <div class="avatar">
   </div>
