--- a/src/app/layouts/sam/sam.component.html
+++ b/src/app/layouts/sam/sam.component.html
@@ -1,39 +1,18 @@
 <div class="content">
   <div class="container">
     <p style="margin: auto 2vh;">Người chơi:</p>
-    <div class="col-5">      
-      <input class="input-name" type="text"> {{point1}} điểm
-    </div>
-    <div class="col-5">
-      <input class="input-name" type="text"> {{point2}} điểm
-    </div>
-    <div class="col-5">
-      <input class="input-name" type="text"> {{point3}} điểm
-    </div>
-    <div class="col-5">
-      <input class="input-name" type="text"> {{point4}} điểm
-    </div>
-    <div class="col-5">
-      <input class="input-name" type="text"> {{point5}} điểm
+    <div class="col-5" *ngFor="let game of player; let i = index">
+      <input class="input-name" id="{{i}}" type="text"[disabled]="vongChoiCu > 0 ? true : false"> {{game.tong}} điểm
     </div>
   </div>
+  <button class="van-tiep" (click)="vanTiep()">Ván tiếp</button>
   <div class="content-input">
-    <div class="container" *ngFor="let index of times">
-      <p style="margin: auto 4vh;"> Vòng {{index > 9 ? index : '0' + index}}: </p>
-      <div class="col-5">      
-        <input class="input-name" (keyup)="inputPoint1($event.target.value)" id='point1{{index}}' type="number">
-      </div>
-      <div class="col-5">
-        <input class="input-name" (keyup)="inputPoint2($event.target.value)" id='point2{{index}}' type="number">
-      </div>
-      <div class="col-5">
-        <input class="input-name" (keyup)="inputPoint3($event.target.value)" id='point3{{index}}' type="number">
-      </div>
-      <div class="col-5">
-        <input class="input-name" (keyup)="inputPoint4($event.target.value)" id='point4{{index}}' type="number">
-      </div>
-      <div class="col-5">
-        <input class="input-name" (keyup)="inputPoint5($event.target.value)" id='point5{{index}}' type="number">
+    <div class="container" *ngFor="let vong_choi of times">
+      <p style="margin: auto 4vh;"> Vòng {{vong_choi > 9 ? vong_choi : '0' + vong_choi}}: </p>
+      <div class="col-5" *ngFor="let game of player; let nguoi_choi = index">
+        <input class="input-name" (blur)="sumPoint($event, vong_choi, nguoi_choi)"
+        (keyup)="checkKey($event.keyCode)"
+          id='point{{vong_choi}}' [disabled]="vong_choi - times.length < 0 ? true : false" type="number">
       </div>
     </div>
   </div>
