--- a/src/app/layouts/sam/sam.component.scss
+++ b/src/app/layouts/sam/sam.component.scss
@@ -1,28 +1,41 @@
 .container {
   display: flex;
   background-color: #78bd34;
-  width: 280vh;
+  width: 200vh;
   margin: 2vh auto;
 }
 .content-input {
-  background-color: #1c1e1f;
   height:85vh;
+  width: 200vh;
   overflow: auto;
   overflow-x: hidden;
-  .container {
-    background-color: #1c1e1f;    
-  }
+  margin: 2vh auto;
   .container:first-child {
-    background-color: rgb(202, 122, 17);
-  }
-  .container::nth-child(2n+3) {
     background-color: aquamarine;
+    color: black;
   }
+  .container:nth-child(2n+3) {
+    background-color: aquamarine;
+    color: black
+  }
+}
+.van-tiep {
+  display: block;
+  margin: -21px auto;
+  margin-top: 0;
+  background: red;
+  color: white;
+  font-size: 20px;
+  border: none;
+  height: 30px;
+  width: 100px;
+  text-align: center;
 }
 .col-5 {
   display: block;
-  width: 50vh;
+  width: 36vh;
+  margin: auto;
   .input-name {
-    width: 40vh;
+    width: 23vh;
   }
 }
