--- a/src/app/layouts/sam/sam.component.html
+++ b/src/app/layouts/sam/sam.component.html
@@ -1,18 +1,40 @@
+<header>
+  <img src="../../../assets/sam-logo.png" alt="">
+</header>
 <div class="content">
   <div class="container">
-    <p style="margin: auto 2vh;">Người chơi:</p>
-    <div class="col-5" *ngFor="let game of player; let i = index">
-      <input class="input-name" id="{{i}}" type="text"[disabled]="vongChoiCu > 0 ? true : false"> {{game.tong}} điểm
+    <div class="input-name" *ngFor="let game of player; let i = index">
+      <input class="input" id="{{i}}" type="text"[disabled]="vongChoiCu > 0 ? true : false">
+      <h2>{{game.tong}} điểm</h2>
     </div>
   </div>
-  <button class="van-tiep" (click)="vanTiep()">Ván tiếp</button>
-  <div class="content-input">
-    <div class="container" *ngFor="let vong_choi of times">
-      <p style="margin: auto 4vh;"> Vòng {{vong_choi > 9 ? vong_choi : '0' + vong_choi}}: </p>
-      <div class="col-5" *ngFor="let game of player; let nguoi_choi = index">
-        <input class="input-name" (blur)="sumPoint($event, vong_choi, nguoi_choi)"
+  <a class="button btn-thanh-toan">Thanh toán tiền nhá!</a>
+  <a class="button btn-van-tiep" (click)="vanTiep()">Ván tiếp theo</a>
+  <div class="container-vong-choi">
+    <div class="vong-choi" *ngFor="let vong_choi of times">
+      <h3>{{vong_choi > 9 ? vong_choi : '0' + vong_choi}}</h3>
+      <div class="input-vong-choi" *ngFor="let game of player; let nguoi_choi = index">
+        <input class="input" (blur)="sumPoint($event, vong_choi, nguoi_choi)"
         (keyup)="checkKey($event.keyCode)"
           id='point{{vong_choi}}' [disabled]="vong_choi - times.length < 0 ? true : false" type="number">
+        <div class="win">
+          <label class="check-win">Sâm
+            <input type="radio" name="radio{{nguoi_choi}}">
+            <span class="checkmark"></span>
+          </label>
+          <label class="check-win">Chặt 2
+            <input type="radio" name="radio{{nguoi_choi}}">
+            <span class="checkmark"></span>
+          </label>
+          <label class="check-win">Bắt Sâm
+            <input type="radio" name="radio{{nguoi_choi}}">
+            <span class="checkmark"></span>
+          </label>
+          <label class="check-win">Người được chọn
+            <input type="radio" name="radio{{nguoi_choi}}">
+            <span class="checkmark"></span>
+          </label>
+        </div>
       </div>
     </div>
   </div>
