--- a/src/app/layouts/sam/sam.component.html
+++ b/src/app/layouts/sam/sam.component.html
@@ -1,19 +1,30 @@
 <div class="content">
   <div class="container">
-    <p style="margin: auto 2vh;">Người chơi:</p>
-    <div class="col-5" *ngFor="let game of player; let i = index">
-      <input class="input-name" id="{{i}}" type="text"[disabled]="vongChoiCu > 0 ? true : false"> {{game.tong}} điểm
+    <p style="margin: auto 2vh; height: 8vh; line-height: 8vh; ">Người chơi:</p>
+    <div class="col-6" *ngFor="let game of player; let i = index">
+      <input class="input-name" (blur)="inputName($event.target.value, i)" [value]="game.name" id="{{i}}" type="text"
+        [disabled]="vongChoiCu > 0 ? true : false"> {{game.tong}} điểm
     </div>
   </div>
   <button class="van-tiep" (click)="vanTiep()">Ván tiếp</button>
+  <p style="color: red;">Dấu "-" là người thắng trong ván bài đó.</p>
+  <p style="color: red;">Số 0 dành cho người chơi không cộng cũng không trừ</p>
   <div class="content-input">
     <div class="container" *ngFor="let vong_choi of times">
       <p style="margin: auto 4vh;"> Vòng {{vong_choi > 9 ? vong_choi : '0' + vong_choi}}: </p>
       <div class="col-5" *ngFor="let game of player; let nguoi_choi = index">
-        <input class="input-name" (blur)="sumPoint($event, vong_choi, nguoi_choi)"
-        (keyup)="checkKey($event.keyCode)"
-          id='point{{vong_choi}}' [disabled]="vong_choi - times.length < 0 ? true : false" type="number">
+        <input class="input-name" (blur)="sumPoint($event, vong_choi, nguoi_choi)" id='point{{vong_choi}}'
+          (keyup)="inputCode($event.keyCode)" [disabled]="vong_choi - times.length < 0 ? true : false" type="number"><br>
+        <input [(ngModel)]="game.winner" type="radio" id="sam{{nguoi_choi}}" name="gender{{nguoi_choi}}" value="sam">
+        <label for="sam{{nguoi_choi}}">Sâm</label><br>
+        <input [(ngModel)]="game.winner" type="radio" id="an_trang{{nguoi_choi}}" name="gender{{nguoi_choi}}" value="an_trang">
+        <label for="an_trang{{nguoi_choi}}">Ăn trắng</label><br>
+        <input [(ngModel)]="game.winner" type="radio" id="bi_sam{{nguoi_choi}}" name="gender{{nguoi_choi}}" value="bi_sam">
+        <label for="bi_sam{{nguoi_choi}}">Bị bắt Sâm</label><br>
+        <input [(ngModel)]="game.winner" type="radio" id="khong{{nguoi_choi}}" name="gender{{nguoi_choi}}" value="khong">
+        <label for="khong{{nguoi_choi}}">Không bị gì</label><br>
       </div>
     </div>
   </div>
 </div>
+<button (click)="showThanhToan()">Thanh toán</button>
