--- a/src/app/layouts/sam/sam.component.html
+++ b/src/app/layouts/sam/sam.component.html
@@ -4,7 +4,7 @@
 <div class="content">
   <div class="container">
     <div class="input-name" *ngFor="let game of player; let i = index">
-      <input class="input" id="{{i}}" type="text"[disabled]="vongChoiCu > 0 ? true : false">
+      <input class="input" id="{{i}}" (blur)="inputName($event.target.value, i)" value="{{game.name}}" type="text"[disabled]="vongChoiCu > 0 ? true : false">
       <h2>{{game.tong}} điểm</h2>
     </div>
   </div>
@@ -12,26 +12,26 @@
   <a class="button btn-van-tiep" (click)="vanTiep()">Ván tiếp theo</a>
   <div class="container-vong-choi">
     <div class="vong-choi" *ngFor="let vong_choi of times">
-      <h3>{{vong_choi > 9 ? vong_choi : '0' + vong_choi}}</h3>
       <div class="input-vong-choi" *ngFor="let game of player; let nguoi_choi = index">
+        <h3>{{game.name}} ván {{vong_choi > 9 ? vong_choi : '0' + vong_choi}}</h3>
         <input class="input" (blur)="sumPoint($event, vong_choi, nguoi_choi)"
-        (keyup)="checkKey($event.keyCode)"
+        (keyup)="checkKey($event.keyCode)" value="{{game.diem[vong_choi]}}"
           id='point{{vong_choi}}' [disabled]="vong_choi - times.length < 0 ? true : false" type="number">
         <div class="win">
-          <label class="check-win">Sâm
-            <input type="radio" name="radio{{nguoi_choi}}">
+          <label class="check-win">Người được chọn
+            <input type="radio" (click)="checkEvent($event, vong_choi, nguoi_choi)" value='e' name="radio{{nguoi_choi}}">
             <span class="checkmark"></span>
           </label>
           <label class="check-win">Chặt 2
-            <input type="radio" name="radio{{nguoi_choi}}">
+            <input type="radio" (click)="checkEvent($event, vong_choi, nguoi_choi)" value="20" name="radio{{nguoi_choi}}">
             <span class="checkmark"></span>
           </label>
-          <label class="check-win">Bắt Sâm
-            <input type="radio" name="radio{{nguoi_choi}}">
+          <label class="check-win">Không gì cả
+            <input type="radio" (click)="checkEvent($event, vong_choi, nguoi_choi)" value="0" name="radio{{nguoi_choi}}">
             <span class="checkmark"></span>
           </label>
-          <label class="check-win">Người được chọn
-            <input type="radio" name="radio{{nguoi_choi}}">
+          <label class="check-win">Bị bắt sâm
+            <input type="radio" (click)="checkEvent($event, vong_choi, nguoi_choi)" value="80" name="radio{{nguoi_choi}}">
             <span class="checkmark"></span>
           </label>
         </div>
