--- a/src/app/layouts/sam/sam.component.scss
+++ b/src/app/layouts/sam/sam.component.scss
@@ -2,7 +2,7 @@ header {
   text-align: center;
 }
 .content {
-  width: 200vh;
+  width: 150vh;
   height: auto;
   margin: 0 auto;
   // background-color: rebeccapurple;
@@ -17,7 +17,7 @@ header {
     width: 95%;
     height: 50%;
     text-align: center;
-    font-size: 5vh;
+    font-size: 4vh;
     font-weight: bold;
   }
   h2 {
@@ -45,15 +45,21 @@ header {
   cursor: pointer;
   margin-top: 20px;
 }
+.container-vong-choi {
+  overflow-y: scroll;
+  width: 100%;
+  height: 85vh;
+}
+.container-vong-choi::-webkit-scrollbar {
+  display: none;
+}
 .vong-choi {
   display: flex;
   height: 100px;
-  width: 200vh;
+  width: 150vh;
   text-align: center;
   margin-top: 16vh;
   h3 {
-    position: absolute;
-    left: 49%;
     font-size: 27px;
     margin: 5px;
   }
@@ -72,7 +78,7 @@ header {
 }
 .vong-choi:first-child {
   color:  rgb(240, 128, 63);
-  margin-top: 6%;
+  margin-top: 0;
 }
 .vong-choi:nth-child(2n+3) {
   color: rgb(240, 128, 63);
