--- a/src/app/layouts/sam/sam.component.scss
+++ b/src/app/layouts/sam/sam.component.scss
@@ -58,7 +58,7 @@ header {
   height: 100px;
   width: 150vh;
   text-align: center;
-  margin-top: 16vh;
+  margin-top: 17%;
   h3 {
     font-size: 27px;
     margin: 5px;
@@ -82,7 +82,7 @@ header {
 }
 .vong-choi:nth-child(2n+3) {
   color: rgb(240, 128, 63);
-  margin-top: 16vh;
+  margin-top: 17%;
 }
 
 
